src/test/resources/test_data/error/patternMismatchedBrackets.smtx
main module test {
    $ [ test ] foo ] $
    (test: int) -> int { 0 }
}